@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-15T00:47:52Z",
-  "count_outdated" : 1078,
-  "uniques_outdated" : 68,
-  "count" : 1518,
+  "timestamp" : "2022-05-15T08:09:59Z",
+  "count_outdated" : 1115,
+  "uniques_outdated" : 69,
+  "count" : 1529,
   "uniques" : 82,
   "views" : [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 26,
-      "count_minmax": [ 0, 37 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-05-03T00:00:00Z",
       "count": 29,
