@@ -1,12 +1,7 @@
 {
-  "count": 440,
+  "count": 414,
   "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 26,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-03T00:00:00Z",
       "count": 29,
